tests/errors/003-typechecking/001-undefined-type/001-basic.xxx
x : float
y : triple
z : int
